# chimera

./: .travis.yml  LICENSE  README.md  bit-stream.cabal  changelog.md  chimera.cabal  fourmolu.yaml
.github/workflows/: ci.yml
Data/: BitStream.hs  Chimera.hs
Data/BitStream/: Compat.hs  ContinuousMapping.hs  WheelMapping.hs
Data/Chimera/: Bool.hs  Compat.hs  ContinuousMapping.hs  FromIntegral.hs  Unboxed.hs  WheelMapping.hs
app/: find-foo.hs
bench/: Bench.hs  Memoize.hs  Read.hs
cbits/: aarch64.c  aarch64.h
src/Data/: Chimera.hs
src/Data/Chimera/: Compat.hs  ContinuousMapping.hs  FromIntegral.hs  Internal.hs  Memoize.hs  WheelMapping.hs
test/: Test.hs
