name:                bit-stream
version:             0.1.0.0
homepage:            https://github.com/Bodigrim/bit-stream#readme
license:             BSD3
license-file:        LICENSE
author:              Bodigrim
maintainer:          andrew.lelechenko@gmail.com
copyright:           2017 Bodigrim
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.BitStream
                       Data.BitStream.ContinuousMapping
                       Data.BitStream.WheelMapping
  build-depends:       base >= 4.8 && < 5, vector
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

source-repository head
  type:     git
  location: https://github.com/Bodigrim/bit-stream

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall -O2
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5, vector, bit-stream,
                       QuickCheck >= 2.10, tasty, tasty-smallcheck, tasty-quickcheck, tasty-hunit

executable find-foo
  main-is:             find-foo.hs
  hs-source-dirs:      app
  build-depends:       base >=4 && <5
                     , bit-stream, vector
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
