name:                bit-stream
version:             0.1.0.2
homepage:            https://github.com/Bodigrim/bit-stream#readme
license:             BSD3
license-file:        LICENSE
author:              Bodigrim
maintainer:          andrew.lelechenko@gmail.com
copyright:           2017 Bodigrim
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
synopsis:            Lazy, infinite, compact stream of Bool with O(1) indexing.

library
  exposed-modules:     Data.BitStream
                       Data.BitStream.ContinuousMapping
                       Data.BitStream.WheelMapping
  other-modules:       Data.BitStream.Compat
  build-depends:         base >= 4.5 && < 5
                       , ghc-prim
                       , vector
  if impl(ghc < 7.10)
    build-depends:       transformers
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

source-repository head
  type:     git
  location: https://github.com/Bodigrim/bit-stream

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall -O2
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:         base >= 4.5 && < 5
                       , bit-stream
                       , QuickCheck >= 2.10
                       , tasty
                       , tasty-hunit
                       , tasty-quickcheck
                       , tasty-smallcheck
                       , vector

executable find-foo
  buildable:           False
  main-is:             find-foo.hs
  hs-source-dirs:      app
  build-depends:       base >= 4.5 && < 5
                     , bit-stream
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  build-depends:         base >= 4.5 && < 5
                       , bit-stream
                       , criterion
  default-language:    Haskell2010
  ghc-options:         -O2
